# EncinoWaves

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt
cmake/: encino_waves_utils.cmake
src/: CMakeLists.txt
src/AlembicExport/: CMakeLists.txt  main.cpp
src/EncinoWaves/: All.h  Basics.h  CMakeLists.txt  DirectionalSpreading.h  Dispersion.h  Exception.cpp  Exception.h  FftwWrapper.cpp  FftwWrapper.h  Filter.h  Foundation.cpp  Foundation.h  InitialState.h  MipMap.h  Normals.h  Parameters.h  Propagation.h  Random.h  Spectra.h  SpectralSpatialField.h  Stats.h
src/EncinoWaves/Tests/: CMakeLists.txt  OceanTestEnvSphere.cpp  OceanTestEnvSphere.h  OceanTestFoundation.h  OceanTestMain.cpp  OceanTestMesh.cpp  OceanTestMesh.h  OceanTestShaders.cpp  OceanTestShaders.h  OceanTestSky.cpp  OceanTestSky.h  OceanTestTextureSky.cpp  OceanTestTextureSky.h  OceanTestViewScene.cpp  OceanTestViewScene.h  test_Fftw.cpp  test_InitialState.cpp  test_MipMap.cpp  test_Propagation.cpp
src/GeepGLFW/: All.h  CMakeLists.txt  Foundation.h  Program.cpp  Program.h  UtilGL.cpp  UtilGL.h
src/GeepGLFW/Tests/: CMakeLists.txt  glfw_helloWorld.cpp  glfw_helloWorld2.cpp
src/SimpleSimViewer/: All.h  CMakeLists.txt  Foundation.h  GLCamera.cpp  GLCamera.h  LinesDrawHelper.cpp  LinesDrawHelper.h  MeshDrawHelper.cpp  MeshDrawHelper.h  PointsDrawHelper.cpp  PointsDrawHelper.h  Sim.cpp  Sim.h  StdShaders.cpp  StdShaders.h  ViewerGLFW.cpp  ViewerGLFW.h
src/SimpleSimViewer/Tests/: CMakeLists.txt  test_SimpleMeshSim.cpp  test_SimplePointsSim.cpp
src/Util/: All.h  CMakeLists.txt  Exception.cpp  Exception.h  Foundation.h  Functions.h  Timer.h
src/Util/Tests/: CMakeLists.txt  test_Cpp11.cpp  test_Exceptions.cpp  test_Functions.cpp
